@@ -103,3 +103,4 @@ Changes in version 1.11.x
 + loadFromMetaphlan: support "taxonomy" column for specifying taxonomy
 + cluster: Overwrite old results instead of failing
 + getPrevalence: bugfix, if assay contains NA values, it does not end up to NA anymore.
++ getExperimentCrossCorrelation fix: enable using of sampleMap in MAE.
